@@ -17,6 +17,7 @@ Eric Hanchrow <erich@microsoft.com>
 Heiko Schroeder <heiko@pool.informatik.rwth-aachen.de>
 Hisazumi Kenji <nel@soraneko.com>
 Jochen Hoenicke <jochen@gnu.org>
+John Tobey <spam@john-edwin-tobey.org>
 Klaus Reichl <klaus.reichl@alcatel.at>
 Kunihiro Ishiguro <kunihiro@zebra.org>
 Mark Lundeberg <aa026@pgfn.bc.ca>
